--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@dietime/react-native-date-picker": "^1.2.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.3.5",
     "expo": "^48.0.7",
+    "expo-barcode-scanner": "^12.3.2",
     "expo-constants": "~14.2.1",
     "expo-font": "^11.1.1",
+    "expo-linear-gradient": "^12.1.2",
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
+    "expo-permissions": "^14.1.1",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
@@ -26,12 +32,15 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.5.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
-    "react-native-webview": "^12.0.2"
+    "react-native-webview": "^12.0.2",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
