--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "expo-barcode-scanner": "^12.3.2",
     "expo-constants": "~14.2.1",
     "expo-font": "^11.1.1",
-    "expo-linear-gradient": "^12.1.2",
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
     "expo-permissions": "^14.1.1",
@@ -40,7 +39,8 @@
     "react-native-web": "~0.18.7",
     "react-native-webview": "^12.0.2",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "@react-native-picker/picker": "2.4.8"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
