--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-background-timer": "^2.4.1",
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-linear-gradient": "^2.6.2",
@@ -39,8 +41,7 @@
     "react-native-web": "~0.18.7",
     "react-native-webview": "^12.0.2",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "@react-native-picker/picker": "2.4.8"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
