--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-web": "~0.18.7",
     "react-native-webview": "^12.0.2",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "expo-background-fetch": "~11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
