--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.3.5",
     "expo": "^48.0.7",
+    "expo-background-fetch": "~11.1.1",
     "expo-barcode-scanner": "^12.3.2",
     "expo-constants": "~14.2.1",
     "expo-font": "^11.1.1",
@@ -30,9 +31,10 @@
     "react-native": "0.71.3",
     "react-native-background-timer": "^2.4.1",
     "react-native-dotenv": "^3.4.8",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-maps": "^1.5.0",
+    "react-native-maps": "^1.7.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
@@ -41,8 +43,7 @@
     "react-native-web": "~0.18.7",
     "react-native-webview": "^12.0.2",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "expo-background-fetch": "~11.1.1"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
