--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.7.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
